# peeplab

./: CLAUDE.md  Cargo.toml  README.md  config.toml.example
src/: app.rs  error.rs  git.rs  lib.rs  log_processor.rs  main.rs
src/config/: loader.rs  mod.rs  settings.rs
src/editor/: mod.rs
src/events/: actions.rs  handler.rs  mod.rs
src/gitlab/: client.rs  mod.rs  models.rs
src/ui/: layout.rs  mod.rs
src/ui/components/: comments_list.rs  help.rs  job_list.rs  log_viewer.rs  mod.rs  mr_tabs.rs  pipeline_list.rs  status_bar.rs
tests/: integration_test.rs
